--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
 .coinlist-table {
+    margin: auto;
     width: 100%;
     max-width: 1000px;
+    border-collapse: collapse; 
+}
+
+.coinlist-tr {
+    border-bottom: 1px solid grey;
 }
 
 .coinlist-th {
     text-transform: uppercase;
     text-align: left;
+}
+
+.coinlist-img {
+    width: 30px;
+    height: 30px;
 }
