--- a/src/App.css
+++ b/src/App.css
@@ -6,25 +6,44 @@
 }
 
 .coinlist-tr {
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid rgb(192, 192, 192);
+    line-height: 40px;
+    margin: auto;
 }
 
 .coinlist-th {
     text-transform: uppercase;
     text-align: left;
+    color:rgb(192, 192, 192);
 }
 
 .coinlist-th__title__active-sort {
     text-decoration: underline;
 }
 
+.coinlist-td__details {
+    display: flex;
+}
+
+.coinlist--name {
+    min-width: 75px;    
+}
+.coinlist--name:nth-child(3) {
+    color:rgb(192, 192, 192);
+}
+
 .coinlist-img {
     width: 30px;
     height: 30px;
+    margin: 5px 15px 5px 5px;
+}
+
+.coinlist--price {
+    text-align: right;
 }
 
 .coinprice__positive {
-    color: green;
+    color: #48ef48;
 }
 .coinprice__negative {
     color: red;
