--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+.coinlist {
+    margin: auto;
+    width: 100%;
+    max-width: 1000px;
+}
+
+
+
+
+
 .coinlist__input {
     border-radius: 8px;
     padding: 8px;
@@ -5,9 +15,7 @@
 
 
 .coinlist-table {
-    margin: auto;
     width: 100%;
-    max-width: 1000px;
     border-collapse: collapse; 
 }
 
