--- a/src/App.css
+++ b/src/App.css
@@ -5,19 +5,17 @@
 }
 
 
-
-
-
 .coinlist__input {
     border-radius: 8px;
     padding: 8px;
 }
 
 
-.coinlist-table {
+.coinlist__table {
     width: 100%;
     border-collapse: collapse; 
 }
+
 
 .coinlist-tr {
     border-bottom: 1px solid rgb(192, 192, 192);
