--- a/src/App.css
+++ b/src/App.css
@@ -17,74 +17,74 @@
 }
 
 
-.coinlist-tr {
+.coinlist__tr {
     border-bottom: 1px solid rgb(192, 192, 192);
     line-height: 56px;
     margin: auto;
 }
 
-.coinlist-th {
+.coinlist__th {
     text-transform: uppercase;
     text-align: left;
     color:rgb(192, 192, 192);
 }
-.coinlist-th:last-of-type {
+.coinlist__th:last-of-type {
     text-align: right;
 }
 
 
-.coinlist-th__title__active-sort {
+.coinlist__th--active-sort {
     text-decoration: underline;
 }
 
-.coinlist-td__details {
+.coin--details {
     display: flex;
 }
 
-.coinlist--name {
+.coin--name {
     min-width: 75px;    
 }
-.coinlist--name:last-of-type {
+.coin--name:last-of-type {
     color:rgb(192, 192, 192);
 }
-.coinlist--name-container {
+.coin--name-container {
     width: 100%;
     display: flex;
 }
 
-.coinlist-img {
+.coinlist__img {
     width: 43px;
     height: 43px;
     margin: 5px 15px 5px 5px;
 }
 
-.coinlist--price {
+.coin--price {
     text-align: right;
 }
 
-.coinlist--arrow-small {
+.coin--arrow-small {
     font-size: 8px;
     margin-right: 5px;
 }
 
-.coinlist--percentage-positive {
+.coin--percentage-positive {
     color: #48ef48;
 }
-.coinlist--percentage-negative {
+.coin--percentage-negative {
     color: red;
 }
 
 @media only screen and (max-width: 700px) {
-    .coinlist-td:nth-child(2),
-    .coinlist-th:nth-child(2) {
+    .coinlist__td:nth-child(2),
+    .coinlist__th:nth-child(2) {
         display: none;
     }
-    .coinlist--name-container {
+    .coin--name-container {
         padding: 5px;
         line-height: 20px;
         display: block;
     }
-    .coinlist--name {
+    .coin--name {
         width: 100%;
         display: block;
     }
