--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@
     line-height: 56px;
     margin: auto;
 }
+.coinlist__tr:hover {
+    background-color:rgb(233, 233, 233);
+    font-weight: bold;
+    cursor: pointer;
+}
+
 
 .coinlist__th {
     text-transform: uppercase;
@@ -31,15 +37,22 @@
 .coinlist__th:last-of-type {
     text-align: right;
 }
-
-
 .coinlist__th--active-sort {
     text-decoration: underline;
 }
 
+
+.coinlist__img {
+    width: 43px;
+    height: 43px;
+    margin: 5px 15px 5px 5px;
+}
+
+
 .coin--details {
     display: flex;
 }
+
 
 .coin--name {
     min-width: 75px;    
@@ -52,38 +65,42 @@
     display: flex;
 }
 
-.coinlist__img {
-    width: 43px;
-    height: 43px;
-    margin: 5px 15px 5px 5px;
-}
 
 .coin--price {
     text-align: right;
 }
+
 
 .coin--arrow-small {
     font-size: 8px;
     margin-right: 5px;
 }
 
+
 .coin--percentage-positive {
     color: #48ef48;
 }
+
+
 .coin--percentage-negative {
     color: red;
 }
+
 
 @media only screen and (max-width: 700px) {
     .coinlist__td:nth-child(2),
     .coinlist__th:nth-child(2) {
         display: none;
     }
+
+
     .coin--name-container {
         padding: 5px;
         line-height: 20px;
         display: block;
     }
+
+
     .coin--name {
         width: 100%;
         display: block;
